--- a/Jupyter Notebook/Miliarderzy Forbes.ipynb
+++ b/Jupyter Notebook/Miliarderzy Forbes.ipynb
@@ -985,4 +985,18 @@
  },
  "nbformat": 4,
  "nbformat_minor": 5
-}
+},
+  {
+   "cell_type": "markdown",
+   "id": "9d5265d2-1f27-4321-81fb-3a7d4bb1eed4",
+   "metadata": {},
+   "source": [
+    " 📌 Pełna analiza pozykanych danych: [Miliarderzy w liczbach. Kim są najbogatsi ludzie świata?](https://github.com/ElaWajdzik/Ongoing_Projects/blob/main/%2352wykresy2025/03%20-%20miliarderzy%20Forbes.md)\n",
+    "\n",
+    "W analizie odpowiadam m.in. na pytania:\n",
+    "* W jakich krajach mieszkają najbogatsi?\n",
+    "* Jak wygląda podział miliartedów według płci?\n",
+    "* Jakie są najpopularniejsze źródła majątku najbogatszych ludzi?\n",
+    "* Jak ma sie bogactwo miliarderów do globalnego bogactwa?"
+   ]
+  }
